[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "making_question_ai_decorator_storage"
version = "0.1.0"
authors = [
  { name="Danilo Silva", email="contact@danilocgsilva.me" },
]
description = "Storage infos from ai server performance and configuration for questions made"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "make_question_interface @ git+https://github.com/danilocgsilva/make_question_interface.git",
]

[project.urls]
"Homepage" = "https://github.com/danilocgsilva/making_question_ai_decorator_storage"
